--- a/website/snat/templates/index.html
+++ b/website/snat/templates/index.html
@@ -34,8 +34,8 @@
           <table>
             <thead>
               <tr>
-                <th>转发网络</th>
-                <th>转发后IP</th>
+                <th>需转换的源IP（或网段）</th>
+                <th>转换后的IP</th>
                 <th>操作</th>
               </tr>
             </thead>
