Update docs for v1.1.0

--- a/website/docs/templates/docs/ipsec.html
+++ b/website/docs/templates/docs/ipsec.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="large-12 columns">
           <div class="panel">
-            <h3>IPSec Site-to-Site VPN 使用指南</h3>
+            <h3>IPSec Site-to-Site VPN 使用指南（VPC 网络场景）</h3>
             <hr />
             <img src="{{ url_for('docs.static', filename='img/ipsec_01.png') }}">
             <p>如上图所示，VPC1私网为：172.16.0.0/24，VPC2私网为：192.168.0.0/24。其中，两个VPC 中各有一台使用VPN/SNAT镜像安装的GateWay VM，并绑定了EIP。<br />
