--- a/website/docs/templates/docs/guide.html
+++ b/website/docs/templates/docs/guide.html
@@ -30,6 +30,11 @@
               <li>同一用户名下多个VPC(包括同Region/不同Region)之间通过VPN 打通(Site-to-Site)。</li>
               <li>跨账号、跨区域的云服务器之间内网互通(拨号VPN。可将不同账号下的云服务器拨入同一个FlexGW VPN 内，然后用VPN 分配的私网地址进行互通)。</li>
             </ol>
+            <h5>登陆说明：</h5>
+            <ul>
+              <li>登陆地址：https://VM公网IP</li>
+              <li>使用VM的系统账号密码即可登入系统，即所有可通过SSH登陆主机的用户都可以登入该系统。</li>
+            </ul>
 
             <h3>软件组成</h3>
             <hr />
