Supported custom esp encryption algorithm, integrity algorithm and dh algorithm.
- supported 12 kinds of encryption algorithms.
- supported 13 kinds of integrity algorithms.
- supported 20 kinds of dh algorithms.

--- a/website/vpn/sts/templates/sts/view.html
+++ b/website/vpn/sts/templates/sts/view.html
@@ -46,6 +46,30 @@
         </div>
         <div class="row">
           <div class="large-3 columns">
+            {{ form.encryption_algorithm.label(class="right inline") }}
+          </div>
+          <div class="large-5 columns end">
+            {{ form.encryption_algorithm }}
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-3 columns">
+            {{ form.integrity_algorithm.label(class="right inline") }}
+          </div>
+          <div class="large-5 columns end">
+            {{ form.integrity_algorithm }}
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-3 columns">
+            {{ form.dh_algorithm.label(class="right inline") }}
+          </div>
+          <div class="large-5 columns end">
+            {{ form.dh_algorithm }}
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-3 columns">
             {{ form.local_subnet.label(class="right inline") }}
           </div>
           <div class="large-5 columns end">
