Supported custom IKEv2 encryption algorithm, integrity algorithm and dh group.
- ike settings backward compatible v1.1.0 using default value.
- supported esp dh group is null.
- update strongswan.conf file, add ike_name for log.
- add footer for pages.

--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -79,6 +79,16 @@
 
   <!-- start of footer -->
   <footer class="row">
+    <div class="large-6 columns">
+      <small>
+        a vpn, snat web app for ecs.
+      </small>
+    </div>
+    <div class="large-6 columns">
+      <small class="right">
+        © 2014-2015 Flex GateWay Project.
+      </small>
+    </div>
   </footer>
   <!-- end of footer -->
 
